p/themes/Origine-compact/origine-compact.css
@charset "UTF-8";

/*=== GENERAL */
/*============*/
input, select, textarea {
	padding: 3px 5px 2px 5px;
	min-height: 25px;
	line-height: 2;
}

/*=== COMPONENTS */
/*===============*/
/*=== Forms */
.form-group.form-actions .btn {
	margin: 0 10px;
}

.form-group .group-controls {
	min-height: 25px;
	padding: 8px 0;
}

/*=== Buttons */
.btn {
	margin: 0;
	padding: 5px 10px;
	min-height: 32px;
	line-height: 1.4;
}

a.btn,
.stick .btn {
	min-height: 20px;
	line-height: 1.4;
}

/*=== Navigation */

/*=== Horizontal-list */
.horizontal-list {
	font-size: 0.9rem;
}

.horizontal-list .item {
	line-height: 2.2;
}

.horizontal-list .item .item-element {
	padding: 1px 0 0 0;
}

/*=== Dropdown */
.item ~ .dropdown-header,
.item.separator {
	border-top-color: #ddd;
}

/*=== Alerts */
/*=== Pagination */
/*=== Boxes */
/*=== Tree */
.tree-folder-title {
	padding: 0 5px;
	line-height: 2.2;
	font-size: 0.9rem;
}

.tree-folder-items > .item {
	line-height: 2.4;
}

/*=== STRUCTURE */
/*===============*/
/*=== Header */
.header {
	height: 40px;
}

.header > .item {
	padding: 0px;
}

.header .item.configure .btn,
.header .item.search .btn {
	min-height: 18px;
	padding: 4px 10px;
	line-height: 1.4;
}

.header > .item.title .logo {
	height: 25px;
}

.header > .item.search input {
	padding: 1px 5px;
}

/*=== Body */
#global {
	height: calc(100vh - 40px);
}

/*=== Aside main page (categories) */
.aside.aside_feed .category .title:not([data-unread="0"])::after,
.global .box.category .title:not([data-unread="0"])::after {
	margin: 0.4em 0 0 0;
}

.aside.aside_feed .feed .item-title:not([data-unread="0"])::after {
	margin: 0.5em 0 0 0;
}

/*=== Day indication */
.day {
	font-size: 0.9rem;
	line-height: 2;
}

.day .name {
	font-size: 1em;
	opacity: 0.6;
}

/*=== Index menu */
/*=== Feed articles */
.flux .item {
	padding: 0;
}

.flux .item.thumbnail {
	padding: 5px;
	height: 50px;
}

.flux .item.thumbnail.small {
	height: 30px;
}

.flux .item.thumbnail.portrait {
	width: 38px;
}

.flux .item.thumbnail.square {
	width: 50px;
}

.flux .item.thumbnail.landscape {
	width: 80px;
}

.flux .item.thumbnail.portrait.small {
	width: 20px;
}

.flux .item.thumbnail.square.small {
	width: 30px;
}

.flux .item.thumbnail.landscape.small {
	width: 40px;
}

.flux .item.title .summary {
	max-height: 1.5em;
}

.flux .flux_header .item .item-element {
	padding: 0.25rem 0;
}

/*=== Content of feed articles */
.content {
	padding: 10px 10px;
}

#stream.normal .content > h1.title {
	display: none;
}

/*=== Notification and actualize notification */
/*=== "Load more" part */
#bigMarkAsRead {
	font-size: 1.2em;
}

#bigMarkAsRead .bigTick {
	font-size: 3em;
}

/*=== Navigation menu (for articles) */
#nav_entries {
	line-height: 2.2;
}

/*=== READER VIEW */
/*================*/
/*=== GLOBAL VIEW */
/*================*/
/*=== DIVERS */
/*===========*/
/*=== STATISTICS */
/*===============*/
/*=== MOBILE */
/*===========*/

@media (max-width: 840px) {
	.nav_menu .search input {
		padding: 1px 5px;
	}

	.dropdown-target:target ~ .dropdown-toggle:not(.btn) ~ .dropdown-menu {
		margin-top: 5px;
	}

	.post {
		padding-left: 15px;
		padding-right: 15px;
	}
}

